# diamond-core-filters

./: .gitignore  CREDITS  INSTALL  Makefile.am  Makefile.in  Makefile.template.in  acinclude.m4  configure.ac  configure.in  git-export.sh
codecs/: build.mk  null.xml
common/: Makefile.in  snapfind_consts.h
config/: gid_map
configs/: snapfind_macros.m4
debian/: copyright  rules
filters/: build.mk
include/: factory.h  img_search.h  lib_filimage.h  lib_ocvimage.h  lib_results.h  lib_sfimage.h  rgb.h  snapfind_config.h  snapfind_consts.h
lib/: Makefile.in  build.mk
predicates/: average_hash.xml  build.mk  dog_texture.xml  gabor_texture.xml  num_attr.xml  ocv_face.xml  perceptual_hash.xml  rgb_histo.xml
scripts/: gen_satya.sh  gen_snapfind.sh
searches/: Makefile.in  build.mk
snap_bench/: .gitignore  Makefile.in  bench_config.l  snap_bench.h
snapfind/: .gitignore  Makefile.in  TODO  attr_info.cc  attr_info.h  attr_map.l  cache_control.cc  decoder.cc  example_search.cc  face_search.h  factory.cc  factory.h  gid_map.sample  graph_win.h  gtk_image_tools.c  img_search.cc  img_search.h  import_sample.cc  import_sample.h  name_map.sample  plugin-runner.cc  plugin.cc  plugin.h  plugin_conf.l  progress_win.cc  read_config.h  (+18 more)
src/: CREDITS  INSTALL  Makefile.in  Makefile.template.in  config.h.in  configure.in
src/common/: Makefile.in  Makefile.template  common_consts.h  display_img.cc  display_img.h  dog_texture_search.h  example_search.cc  face.h  face_consts.h  face_data.h  face_image.c  face_image.h  face_tools.c  face_tools.h  facedet.c  facedet.h  fil_assert.h  fil_data2ii.c  fil_data2ii.h  fil_face.c  fil_face.h  fil_file.c  fil_file.h  fil_histo.c  fil_histo.h  fil_image_tools.c  fil_image_tools.h  fil_rgb.c  fil_texture.cc  fil_texture.h  fil_tools.c  fil_tools.h  filter_api.h  gtk_image_tools.c  gtk_image_tools.h  gui_thread.c  gui_thread.h  histo.c  histo.h  histo_ii.cc  (+29 more)
src/config/: name_map
src/configs/: snapfind_macros.m4
src/debian/: changelog  control  dirs
src/lib/: Makefile.in
src/lib/libocvimage/: Makefile.in  lib_ocvimage.c  lib_ocvimage.h
src/lib/libresults/: Makefile.in  lib_results.c  lib_results.h
src/lib/libsfgtk/: Makefile.in  gui_thread.h
src/lib/libsfimage/: Makefile  Makefile.in  fil_image_tools.c  image_draw.c  image_tools.c  lib_sfimage.h  readjpeg.c  readjpeg.h  readtiff.c  readtiff.h  rgb.c  rgb.h
src/searches/: Makefile.in
src/searches/3D_match/: 3D_match.sf_conf  Makefile.in  fil_3D_match.c  fil_3D_match.h  match_3D.cc  match_3D.h
src/searches/dog_texture/: Makefile.in  dog_texture.sf_conf  dog_texture_search.cc  dog_texture_search.h  fil_texture.cc  fil_texture.h  texture_tools.c  texture_tools.h
src/searches/gabor_texture/: Makefile.in  fil_gab_texture.cc  fil_gab_texture.h  gabor.cc  gabor.h  gabor_filter.cc  gabor_filter.h  gabor_priv.h  gabor_texture.sf_conf  gabor_texture_search.cc  gabor_texture_search.h  gabor_tools.cc  gabor_tools.h
src/searches/img_diff/: Makefile.in  fil_img_diff.c  fil_img_diff.h  img_diff.cc  img_diff.h  img_diff.sf_conf
src/searches/null/: Makefile.in  fil_null.c  null.cc  null.sf_conf
src/searches/num_attr/: Makefile.in  fil_num_attr.c  fil_num_attr.h  num_attr.sf_conf  num_attr_priv.h  num_attr_search.cc  num_attr_search.h
src/searches/ocv_face/: Makefile.in  fil_ocv_body.c  fil_ocv_body.h  fil_ocv_common.c  fil_ocv_common.h  fil_ocv_face.c  fil_ocv_face.h  fil_ocv_lowerbody.c  fil_ocv_lowerbody.h  fil_ocv_profile.c  fil_ocv_profile.h  fil_ocv_upperbody.c  fil_ocv_upperbody.h  ocv_body_search.cc  ocv_body_search.h  ocv_face_search.cc  ocv_face_search.h  ocv_lowerbody_search.cc  ocv_lowerbody_search.h  ocv_profile_search.cc  ocv_profile_search.h  ocv_search.cc  ocv_search.h  ocv_upperbody_search.cc  ocv_upperbody_search.h  opencv_body.sf_conf  opencv_face.h  opencv_face.sf_conf  opencv_face_tools.c  opencv_face_tools.h  opencv_lowerbody.sf_conf  opencv_profile.sf_conf  opencv_upperbody.sf_conf
src/searches/regex/: Makefile.in  fil_regex.c  fil_regex.h  regex.sf_conf  regex_priv.h  regex_search.cc  regex_search.h
src/searches/rgb_histogram/: Makefile.in  fil_rgb_histo.c  fil_rgb_histo.h  histo_ii.cc  rgb_histo.c  rgb_histo.h  rgb_histo.sf_conf  rgb_histo_search.cc  rgb_histo_search.h
src/searches/rgbimg/: Makefile.in  fil_rgb.c  fil_rgb.h  rgb_img.cc  rgb_img.h  rgb_img.sf_conf
src/searches/shingling/: fil_shingling.c  rabin.c  rabin.h  shingling_search.cc  shingling_search.h
src/searches/text_attr/: Makefile.in  fil_text_attr.c  fil_text_attr.h  text_attr.sf_conf  text_attr_priv.h  text_attr_search.cc  text_attr_search.h
src/searches/thumbnailer/: Makefile.in  fil_thumb.c  thumbnailer.cc  thumbnailer.sf_conf
src/searches/vj_face/: Makefile.in  facedet.c  facedet.h  fil_data2ii.c  fil_data2ii.h  fil_vj_face.c  fil_vj_face.h  ii_img.cc  merge_faces.c  merge_faces.h  vj_face.sf_conf  vj_face_search.cc  vj_face_search.h  vj_face_tools.c  vj_face_tools.h
src/snap_bench/: Makefile  Makefile.in  bench_config.l  snap_bench.c  snap_bench.h
src/snap_bench/sample_scripts/: do_bench  example_bench  example_script  gen_conf
src/snapfind/: Makefile  Makefile.in  TODO  attr_decode.cc  attr_decode.h  attr_ent.cc  attr_ent.h  attr_info.cc  attr_info.h  attr_map.l  cache_control.cc  data.h  decoder.cc  decoder.h  diamond1.ppm  display_img.cc  display_img.h  example_search.cc  face.c  face_benchmark.c  face_search.h  face_widgets.h  factory.cc  factory.h  fil_data2cv.c  fil_data2cv.h  fil_synth.c  fil_synth.h  foo.cc  gid_map.sample  graph_win.cc  graph_win.h  gtk_image_tools.c  gtk_image_tools.h  histo_bench.c  img_search.cc  img_search.h  import_sample.cc  import_sample.h  log_win.cc  (+32 more)
src/snapfind/sample_search/: bluegray_water.ex2.ppm  bluegray_water.ex3.ppm  bluegray_water.ex5.ppm  bright_red.ex0.ppm  bw32.ppm  grass.ex2.ppm  grass.ex3.ppm  pure_black.ex0.ppm  pure_black.ex1.ppm  pure_black.ex4.ppm  pure_white.ex0.ppm  search_config  waves.ex1.ppm
src/snapfind/samples/: ape.ppm  deer.ppm  horse.ppm  ocean.ppm  wind_surf1.ppm  wind_surf2.ppm  windsurf.ppm  wolf.ppm
(+248 files in other folders)
