#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([common/gtk_image_tools.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LN_S

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lcvaux':
AC_CHECK_LIB([cvaux], [main])
# FIXME: Replace `main' with a function in `-ldconfig':
AC_CHECK_LIB([dconfig], [main])
# FIXME: Replace `main' with a function in `-ldctl':
AC_CHECK_LIB([dctl], [dctl_read_char])
# FIXME: Replace `main' with a function in `-ldl':
AC_CHECK_LIB([dl], [main])
# FIXME: Replace `main' with a function in `-lfilter':
AC_CHECK_LIB([filter], [main])
# FIXME: Replace `main' with a function in `-lfilterexec':
AC_CHECK_LIB([filterexec], [main])
# FIXME: Replace `main' with a function in `-lfl':
AC_CHECK_LIB([fl], [main])
# FIXME: Replace `main' with a function in `-lhstub':
AC_CHECK_LIB([hstub], [main])
# FIXME: Replace `main' with a function in `-llog':
AC_CHECK_LIB([log], [main])
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])
# FIXME: Replace `main' with a function in `-lodisk':
AC_CHECK_LIB([odisk], [main])
# FIXME: Replace `main' with a function in `-lopencv':
AC_CHECK_LIB([opencv], [main])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main])
# FIXME: Replace `main' with a function in `-lsearchlet':
AC_CHECK_LIB([searchlet], [main])
# FIXME: Replace `main' with a function in `-lssl':
AC_CHECK_LIB([ssl], [main])
# FIXME: Replace `main' with a function in `-ltools':
AC_CHECK_LIB([tools], [main])
# FIXME: Replace `main' with a function in `-lwvlt':
AC_CHECK_LIB([wvlt], [main])

OBJROOT=`pwd`
AC_SUBST(OBJROOT)


# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stdint.h stdlib.h string.h sys/socket.h sys/time.h unistd.h values.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([getcwd gethostbyaddr gettimeofday inet_ntoa memset mkdir pow regcomp rint sqrt strdup strerror strtol])

AC_CONFIG_FILES([Makefile
                 snap_bench/Makefile
                 snapfind/Makefile
                 searches/Makefile
                 searches/regex/Makefile
                 searches/gabor_texture/Makefile
                 searches/ocv_face/Makefile
		 target/Makefile
		 target/bin/Makefile
		 target/lib/Makefile
		 target/etc/Makefile])
AC_OUTPUT
