# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([common/snapfind_consts.h]) AC_CONFIG_HEADER([config.h]) 
# Checks for the standard compile programs 
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LEX
AC_PROG_AWK


#
# Load snapfind macros
#
#AC_CONFIG_AUX_DIR(configs)
sinclude(configs/snapfind_macros.m4)

#
# Paths to search for static libraries when building searchlet code.
#
ADD_LIB_SEARCH([/usr/lib])
ADD_LIB_SEARCH([/lib])

SNAPFIND_OPTIONS_SYS(diamond)

# Checks for libraries.

# Look for the various diamond libraries that we need
# XXX replace mains with real functions 
AC_CHECK_LIB([dconfig], [main], , 
	[AC_MSG_ERROR(Missing libdconfig: try using --with-diamond option)])
AC_CHECK_LIB([dctl], [dctl_read_char], , 
	[AC_MSG_ERROR(Missing libdctl: try using --with-diamond option)])
AC_CHECK_LIB([filter], [main], ,
	[AC_MSG_ERROR(Missing libfilter: try using --with-diamond option)])
AC_CHECK_LIB([searchlet], [main], , 
	[AC_MSG_ERROR(Missing libsearchlet: try using --with-diamond option)])
AC_CHECK_LIB([odisk], [main], , 
	[AC_MSG_ERROR(Missing libodisk: try using --with-diamond option)])
AC_CHECK_LIB([filterexec], [main], , 
	[AC_MSG_ERROR(Missing libfilterexec: try using --with-diamond option)])
AC_CHECK_LIB([hstub], [main], , 
	[AC_MSG_ERROR(Missing libhstub: try using --with-diamond option)])
AC_CHECK_LIB([log], [main], , 
	[AC_MSG_ERROR(Missing liblog: try using --with-diamond option)])
AC_CHECK_LIB([tools], [main], , 
	[AC_MSG_ERROR(Missing libtools: try using --with-diamond option)])


#
# Find static libraries we need for compiling the searchlet code.
#
CHECK_STATIC_LIB([libtiff.a])
CHECK_STATIC_LIB([libjpeg.a])
CHECK_STATIC_LIB([libz.a])

# deal with the cv stuff
AC_CHECK_LIB([cxcore], [main], , )
AC_CHECK_LIB([cvaux], [main], , )
AC_CHECK_LIB([cv], [main], , )


# standard system libraries.
# XXX make this fail
AC_CHECK_LIB([dl], [main])
AC_CHECK_LIB([fl], [main])
AC_CHECK_LIB([m], [main])
AC_CHECK_LIB([pthread], [main])
AC_CHECK_LIB([ssl], [main])

# XXXX
AC_CHECK_LIB([wvlt], [main])

OBJROOT=`pwd`
AC_SUBST(OBJROOT)


AC_SUBST(BUILDROOT)
AC_ARG_WITH(buildroot, [--with-buildroot=DIR set target build hierachy to DIR],
    [ BUILDROOT="`(cd ${withval} ; pwd)`"],
    [ BUILDROOT=${OBJROOT}/target]
    ) 


GTK_CPPFLAGS=`pkg-config gtk+-2.0 gthread-2.0 --cflags-only-I`
GTK_LDFLAGS=`pkg-config gtk+-2.0 gthread-2.0 --libs`
AC_SUBST(GTK_CPPFLAGS)
AC_SUBST(GTK_LDFLAGS)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stdint.h stdlib.h string.h sys/socket.h sys/time.h unistd.h values.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([getcwd gethostbyaddr gettimeofday inet_ntoa memset mkdir pow regcomp rint sqrt strdup strerror strtol])

AC_CONFIG_FILES([Makefile
		Makefile.template
		common/Makefile
		snap_bench/Makefile
		snapfind/Makefile
		searches/Makefile
		searches/text_attr/Makefile
		searches/num_attr/Makefile
		searches/gabor_texture/Makefile
		searches/ocv_face/Makefile
		searches/rgbimg/Makefile
		searches/dog_texture/Makefile
		searches/rgb_histogram/Makefile
		searches/3D_match/Makefile
		searches/img_diff/Makefile
		lib/Makefile
		lib/libsfimage/Makefile
		lib/libresults/Makefile
		lib/libsfgtk/Makefile
		lib/libocvimage/Makefile
		target/Makefile
		target/bin/Makefile
		target/lib/Makefile
		target/include/Makefile])
AC_OUTPUT
